<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_card"
        android:icon="@drawable/ic_baseline_nfc_24"
        android:title="@string/card"
        app:showAsAction="always|withText"
        android:state_pressed="true"/>
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_baseline_my_location_24"
        android:title="@string/map"
        app:showAsAction="always|withText"
        android:state_pressed="true"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"
        app:showAsAction="always|withText"
        android:state_pressed="true"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="always|withText"
        android:state_pressed="true"/>

</menu>