<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center|clip_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".loginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linlay"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_longLogo"
                android:layout_width="match_parent"
                android:layout_height="177dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/better"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/welcome_back"
                android:textColor="#172A76"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_SignInToContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/sign_in_to_continue"
                android:textColor="#00B2AF" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/username"
                app:boxBackgroundColor="@android:color/transparent"
                app:startIconDrawable="@drawable/user_25dp"
                app:startIconTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordSpace"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconDrawable="@drawable/ic_eye"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimaryDark"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/lock_25dp"
                app:startIconTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_english"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/english"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:icon="@drawable/uk"
                app:iconSize="25dp"
                app:iconTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_arabic"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textSize="16sp"
                app:icon="@drawable/algeria"
                app:iconSize="25dp"
                app:iconTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_french"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/french"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:icon="@drawable/france"
                app:iconSize="25dp"
                app:iconTint="@null" />


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/action_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:theme="@style/Theme.MaterialComponents"
            app:cornerRadius="25dp"/>
    </LinearLayout>



</RelativeLayout>