<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reportFragmentID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <TextView
            android:id="@+id/tv_reportTitleReportFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55dp"
            android:gravity="center"
            android:text="@string/report_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_reportAgentReportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/from"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_reportMessageReportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/report_message" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_returnToAF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/returnn"
            android:textColor="#FFFFFF"
            android:theme="@style/Theme.MaterialComponents"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_deleteReportRF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            android:theme="@style/Theme.MaterialComponents"
            app:cornerRadius="15dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>